--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -13,7 +13,7 @@ Before exploring the thermodynamic properties of the adsorption-based xenon/kryp
 
 \subsection{Geometrical descriptors}
 
-Before delving into the details of adsorption properties, it is important to introduce the different simulation techniques used to characterize the internal pore structure of the material. These properties play an essential role in interpreting the adsorption properties obtained using more complex molecular simulations. In this thesis, the Zeo++ software was utilized to calculate all the geometrical descriptors used.\autocite{Zeo++} While other tools exist,\autocite{First_2013,PoreBlazer} the use of Voronoi decomposition of the volume offers computational efficiency advantages (efficiency gain mainly on volume calculation),\autocite{Rycroft_2009} making Zeo++ the preferred tool in this study.
+Before delving into the details of adsorption properties, it is important to introduce the different simulation techniques used to characterize the internal pore structure of the material. These properties play an essential role in interpreting the adsorption properties obtained using more complex molecular simulations. In this thesis, the Zeo++ software was used to calculate all the geometrical descriptors used.\autocite{Zeo++} While other tools exist,\autocite{First_2013,PoreBlazer} the use of Voronoi decomposition of the volume offers computational efficiency advantages (efficiency gain mainly on volume calculation),\autocite{Rycroft_2009} making Zeo++ the preferred tool in this study.
 
 \subsubsection{Pore size}
 
