--- a/4-ml.tex
+++ b/4-ml.tex
@@ -55,12 +55,12 @@ The goal, therefore, is to find a function that minimizes the risk function acro
 \end{equation}
 
 
-The risk function can utilize various loss functions, with an increasing emphasis on large errors depending on their definitions. For instance, a quadratic cost function highly penalizes outliers, thus prioritizing a few medium errors over a single large error. Conversely, an absolute cost function does not exhibit this behavior. Since regression models were exclusively utilized in this thesis work, the details of classification loss functions will not be discussed extensively. Instead, the focus will be on regression loss functions. The quadratic loss or squared error loss $\mathcal{L}\e{SE}(f(\mathbf{x}),y)=0.5{\left(y-f(\mathbf{x})\right)}^2$ of a predictor $f$ on a data point $(\mathbf{x},y)$ is simply defined as the squared difference between the prediction and the true label. The multiplicative $0.5$ coefficient is included to simplify the derivatives. This loss is similar to the mean squared error (MSE) used to compare two quantities across a dataset, where the risk function corresponds to half of the MSE on the predictions $\mathcal{D}_n$:
+The risk function can utilize various loss functions, with an increasing emphasis on large errors depending on their definitions. For instance, a quadratic cost function highly penalizes outliers, thus prioritizing a few medium errors over a single large error. Conversely, an absolute cost function does not exhibit this behavior. Since regression models were exclusively used in this thesis work, the details of classification loss functions will not be discussed extensively. Instead, the focus will be on regression loss functions. The quadratic loss or squared error loss $\mathcal{L}\e{SE}(f(\mathbf{x}),y)=0.5{\left(y-f(\mathbf{x})\right)}^2$ of a predictor $f$ on a data point $(\mathbf{x},y)$ is simply defined as the squared difference between the prediction and the true label. The multiplicative $0.5$ coefficient is included to simplify the derivatives. This loss is similar to the mean squared error (MSE) used to compare two quantities across a dataset, where the risk function corresponds to half of the MSE on the predictions $\mathcal{D}_n$:
 \begin{equation}
   \mathcal{R}\e{SE}(f) = 0.5\frac{1}{n}\sum_{i=1}^n {\left(y_i-f(\mathbf{x}_i)\right)}^2
 \end{equation}
 
-A second commonly used loss function is the absolute loss, which is associated with the mean absolute error (MAE) utilized in error evaluation. The loss can be expressed as $\mathcal{L}\e{AE}(f(\mathbf{x}),y)=\left|y-f(\mathbf{x})\right|$, and the risk function associated with it is simply the MAE across the dataset predictions:
+A second commonly used loss function is the absolute loss, which is associated with the mean absolute error (MAE) used in error evaluation. The loss can be expressed as $\mathcal{L}\e{AE}(f(\mathbf{x}),y)=\left|y-f(\mathbf{x})\right|$, and the risk function associated with it is simply the MAE across the dataset predictions:
 \begin{equation}
   \mathcal{R}\e{AE}(f) = \frac{1}{n}\sum_{i=1}^n \left|y_i-f(\mathbf{x}_i)\right|
 \end{equation}
@@ -126,7 +126,7 @@ Here, $y_i$ represents a scalar quantity in a regression problem ($\mathcal{Y}=\
 \begin{equation}\label{eq:L2_reg}
   \mathcal{R}_n(f) = \frac{1}{n}\sum_{i=1}^n \mathcal{L}\left(f(\mathbf{x}_i),y_i\right) + \lambda_2 {\lVert \boldsymbol{\beta} \rVert}_2^2 = \frac{1}{n}\sum_{i=1}^n {\left(\boldsymbol{\beta}\mathbf{x}_i\ex{T}-y_i\right)}^2 + \lambda_2 \sum_{k=1}^p \left|\beta^{(k)}\right|^2
 \end{equation}
-where $\lambda_2$ is the parameter of the L2-regularization that controls the importance of the regularization term in the optimization process. By adjusting this parameter, the complexity of the model can be regulated, aiming to find an optimal balance between accuracy and generalizability, as depicted in Figure~\ref{fgr:bias_variance}. In the case of considering a polynomial function, where the vector $\mathbf{x}_i$ represents various exponentiations of a scalar $x_i$, such that $\mathbf{x}_i=\left(x_i^0,\ldots,x_i^{n-1}\right)$, the coefficients $\boldsymbol{\beta}$ correspond to the polynomial coefficients of the function $f$. This serves as a clear illustration of how the regularization terms penalize the complexity of the model by directly penalizing the number of terms utilized and influence impact on the fitting process. It is worth noting that this regularization technique can be adapted to other types of models, provided that a suitable L2-norm of the prediction function $f$.
+where $\lambda_2$ is the parameter of the L2-regularization that controls the importance of the regularization term in the optimization process. By adjusting this parameter, the complexity of the model can be regulated, aiming to find an optimal balance between accuracy and generalizability, as depicted in Figure~\ref{fgr:bias_variance}. In the case of considering a polynomial function, where the vector $\mathbf{x}_i$ represents various exponentiations of a scalar $x_i$, such that $\mathbf{x}_i=\left(x_i^0,\ldots,x_i^{n-1}\right)$, the coefficients $\boldsymbol{\beta}$ correspond to the polynomial coefficients of the function $f$. This serves as a clear illustration of how the regularization terms penalize the complexity of the model by directly penalizing the number of terms used and influence impact on the fitting process. It is worth noting that this regularization technique can be adapted to other types of models, provided that a suitable L2-norm of the prediction function $f$.
 
 Another commonly used regularization term is based on the L1-norm of the prediction function. L1-regularized least square linear regression, known as LASSO (Least Absolute Shrinkage and Selection Operator) regression, allows for a sparser selection of the model weights by permitting certain weights to be zero in the model, unlike L2-regularization. The risk function associated with this regression model can be expressed as follows:
 \begin{equation}\label{eq:L1_reg}
@@ -189,7 +189,7 @@ The bagging method consists in generating a set ${\left\{\phi_b\right\}}_{b\in \
 
 The second technique consists in randomly choosing a subsample of features for determining the best split (second part of the CART tree growing algorithm). This technique draws inspiration from the work of Ho in 1998, where each tree of a forest is trained exclusively on a randomly chosen subspace of feature.\autocite{Tin_Kam_Ho_1998} The only difference in the procedure lies in the fact that the feature space changes at each iteration of the tree growing process, rather than between each tree generation. This method also improves the generalizability of the approach by reducing the likelihood of overfitting in each tree, while the overall accuracy is achieved through the aggregation of all the trees.
 
-The random forest, as formulated by Breiman, combines these two randomness-based techniques to train a forest.\autocite{Breiman_2001} The algorithm proceeds by looping over the number of trees $B$ in the forest. For each tree, denoted as $b$, a bootstrap sample $\mathcal{D}\ex{train}_b$ is randomly drawn (with replacement), and this dataset is utilized to grow the tree (training procedure). During training, a modified CART algorithm is applied to expand the tree by recursively splitting each node: (i) instead of testing all features for the best split, only a random selection of $m$ variables is considered among the $p$ features, (ii) the best split point is determined among the $m$ variables, and (iii) the node is split into two until the minimum leaf size, denoted as $n\e{min}$, is reached. The size of the column subsample defines the number of features randomly considered at each split, serving as another implicit regularization parameter associated with the random forest along with the previously identified regularization parameters of the decision tree, such as the minimal leaf size $n\e{min}$ or the maximal depth of a tree. Finally, a set of $B$ trees, denoted as $\left\{\phi_b\right\}$, is obtained, which can be used to build an ensemble model $\Phi$, such that:
+The random forest, as formulated by Breiman, combines these two randomness-based techniques to train a forest.\autocite{Breiman_2001} The algorithm proceeds by looping over the number of trees $B$ in the forest. For each tree, denoted as $b$, a bootstrap sample $\mathcal{D}\ex{train}_b$ is randomly drawn (with replacement), and this dataset is used to grow the tree (training procedure). During training, a modified CART algorithm is applied to expand the tree by recursively splitting each node: (i) instead of testing all features for the best split, only a random selection of $m$ variables is considered among the $p$ features, (ii) the best split point is determined among the $m$ variables, and (iii) the node is split into two until the minimum leaf size, denoted as $n\e{min}$, is reached. The size of the column subsample defines the number of features randomly considered at each split, serving as another implicit regularization parameter associated with the random forest along with the previously identified regularization parameters of the decision tree, such as the minimal leaf size $n\e{min}$ or the maximal depth of a tree. Finally, a set of $B$ trees, denoted as $\left\{\phi_b\right\}$, is obtained, which can be used to build an ensemble model $\Phi$, such that:
 \begin{equation}
   \Phi(\mathbf{x}) = \frac{1}{B}\sum_{b=1}^{B} \phi_b(\mathbf{x}) = \frac{1}{B}\sum_{b=1}^{B}\sum_{m=1}^{M_b} c_{m,b} \mathbb{1}(\mathbf{x}\in R_{m,b})
 \end{equation}
@@ -202,7 +202,7 @@ In the previous approach, the bootstrap dataset consists of a random selection o
   \Phi_B = \frac{1}{\sum_{b=1}^{B} \alpha_b}\sum_{b=1}^{B} \alpha_b\phi_b
 \end{equation}
 
-To train each individual tree $\phi_b$ of this forest, the CART algorithm (described in the previous sections) is utilized, but with a focus on minimizing a weighted risk function rather than the standard one:
+To train each individual tree $\phi_b$ of this forest, the CART algorithm (described in the previous sections) is used, but with a focus on minimizing a weighted risk function rather than the standard one:
 \begin{equation}
   \mathcal{R}(\phi_b) = \sum_{i=1}^N w_i^{(b)} \mathcal{L}\left(\phi_b(\mathbf{x}_i),y_i\right)
 \end{equation}
@@ -287,7 +287,7 @@ The learning rate $\eta$ used for updating the ensemble model is also a key comp
   \caption{Hyperparameters of XGBoost relevant to our work.}\label{tab:hyperparameter}
 \end{table}
 
-To add randomness in the gradient descent procedure, three other parameters that are very similar to the ones implemented in a random forest were utilized. With the integration of these techniques, the model can be referred to as stochastic gradient boosting, as described in the Ref.~\cite{Friedman2002}. In each iteration, a random subsample of the training data is drawn (without replacement) based on a parameter $N\e{sample}/N$. This parameter has a similar effect as the bagging procedure of the random forest, restricting the focus of each weak learner to a portion of the learning set. This approach reduces overfitting, akin to a cross-validation procedure. The different trees learn from distinct segments of the training set, preventing the ensemble model from overfitting the entire dataset. This provides an effective solution to the well-known issue of overfitting encountered in standard gradient boosting. Another procedure involves randomly selecting feature columns, inspired by the concept introduced in Ref.~\cite{Tin_Kam_Ho_1998}. It entails randomly extracting a subsample of the features for the training of each tree. A parameter is required to determine the size of the portion of features  $p\e{tree}/p$ used for training each tree. Similarly, column sampling can be performed at each level rather than for each tree, where a proportion $p\e{level}/p$ is defined accordingly. Alternatively, a random feature sampling at the node level is also a plausible option, although this parameter was not utilized in this context.
+To add randomness in the gradient descent procedure, three other parameters that are very similar to the ones implemented in a random forest were used. With the integration of these techniques, the model can be referred to as stochastic gradient boosting, as described in the Ref.~\cite{Friedman2002}. In each iteration, a random subsample of the training data is drawn (without replacement) based on a parameter $N\e{sample}/N$. This parameter has a similar effect as the bagging procedure of the random forest, restricting the focus of each weak learner to a portion of the learning set. This approach reduces overfitting, akin to a cross-validation procedure. The different trees learn from distinct segments of the training set, preventing the ensemble model from overfitting the entire dataset. This provides an effective solution to the well-known issue of overfitting encountered in standard gradient boosting. Another procedure involves randomly selecting feature columns, inspired by the concept introduced in Ref.~\cite{Tin_Kam_Ho_1998}. It entails randomly extracting a subsample of the features for the training of each tree. A parameter is required to determine the size of the portion of features  $p\e{tree}/p$ used for training each tree. Similarly, column sampling can be performed at each level rather than for each tree, where a proportion $p\e{level}/p$ is defined accordingly. Alternatively, a random feature sampling at the node level is also a plausible option, although this parameter was not used in this context.
 
 Finally, the parameters used in the construction of the final model are compiled in Table~\ref{tab:hyperparameter}. The table encompasses a tree-specific parameter "max\_depth", an ensemble-specific parameter, "n\_estimators", general regularization parameters inspired by linear models "alpha" and "lambda", along with a more gradient boosting specific parameter "learning\_rate", and more randomness-based hyperparameters inspired by random forest, such as "subsample", "colsample\_bytree" and "colsample\_bylevel". This model can be considered as a blending of various concepts drawn from diverse domains within the field of data science. By using this machine learning model, the selectivity drop problem discussed in Chapter 3 will be addressed.
 
@@ -332,7 +332,7 @@ Given the objective of predicting the difference between low-pressure selectivit
 
 \subsubsection{Pore size statistics}
 
-To generate a histogram of pore sizes (or pore size distribution, PSD), Monte Carlo steps are used to measure the frequency of every accessible pore sizes binned by \SI{0.1}{\angstrom}.\autocite{poresize_Pinheiro2013} This histogram can then be utilized to generate descriptors based on statistical parameters that describe the overall location, dispersion, shape, and modality of the distribution. In addition to the mean and standard deviation of the distribution, two additional moments were introduced: the skewness ($\gamma$), which corresponds to the third standardized moment and measures the asymmetry of a distribution; and the kurtosis ($k$), being the fourth standardized moment, measures the relative weight of the distribution's tails. Recognizing the importance of characterizing the number of different pore sizes that are likely to have contributed to the observed selectivity drop, this study tried find a simple descriptor for measuring the number of modes in the distribution. The Sarle's bimodality coefficient, BC $= (\gamma^2 +1)/k$, provides a simple quantification of the extent to which the distribution deviates from unimodality by considering only skewness and kurtosis\autocite{Tarba_2022}.
+To generate a histogram of pore sizes (or pore size distribution, PSD), Monte Carlo steps are used to measure the frequency of every accessible pore sizes binned by \SI{0.1}{\angstrom}.\autocite{poresize_Pinheiro2013} This histogram can then be used to generate descriptors based on statistical parameters that describe the overall location, dispersion, shape, and modality of the distribution. In addition to the mean and standard deviation of the distribution, two additional moments were introduced: the skewness ($\gamma$), which corresponds to the third standardized moment and measures the asymmetry of a distribution; and the kurtosis ($k$), being the fourth standardized moment, measures the relative weight of the distribution's tails. Recognizing the importance of characterizing the number of different pore sizes that are likely to have contributed to the observed selectivity drop, this study tried find a simple descriptor for measuring the number of modes in the distribution. The Sarle's bimodality coefficient, BC $= (\gamma^2 +1)/k$, provides a simple quantification of the extent to which the distribution deviates from unimodality by considering only skewness and kurtosis\autocite{Tarba_2022}.
 
 Finally, to assess the diversity of pores, an effective number $n\e{eff} = N^2/\sum n_i^2$ of pore sizes was introduced, where $N$ represents the total number of points in the histogram and $n_i$ the number of points associated with the $i^\text{th}$ bin. This number bears resemblance to a statistical measure widely used in other scientific domains. In political science, it is employed to measure the effective number of political parties,~\autocite{neffposci_Laakso1979} while in ecology, the inverse Simpson's index evaluates the species diversity in an ecosystem,\autocite{neffbio_Simpson1949}. Similarly, in quantum physics, the inverse participation number measures the degree of localization of a wave-function.\autocite{neffphys_Kramer1993} This effective number of pore sizes provides an indication of the diversity of pore sizes (considering a binning of \SI{0.1}{\angstrom}). A highly effective number suggests that multiple pore sizes are well represented in the structure. Thus, this descriptor provides insight into the scattering of pore sizes within the distribution.
 All these descriptors contain valuable information regarding the form of the PSD required to understand the loading and selectivity situation in the framework near saturation uptake, which is crucial to predict the ambient-pressure selectivity.
@@ -357,7 +357,7 @@ Analyzing the shape of the energy distribution facilitates a quantitative assess
 
 %% 900K gaps
 As explained in the previous chapter, Boltzmann averaging at higher temperature provided better results in describing ambient-pressure selectivity. 
-This novel type of descriptor proves particularly effective in the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (Figure~\ref{fgr:H_900K}). This descriptor was utilized to build several descriptors presented in Table~\ref{tab:energy_descriptors}. As illustrated in Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case rank as the second and third most influential descriptors in this ML model. They complement the exchange Gibbs free energy at \SI{298}{\kelvin} in predicting selectivity at higher pressures.
+This novel type of descriptor proves particularly effective in the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (Figure~\ref{fgr:H_900K}). This descriptor was used to build several descriptors presented in Table~\ref{tab:energy_descriptors}. As illustrated in Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case rank as the second and third most influential descriptors in this ML model. They complement the exchange Gibbs free energy at \SI{298}{\kelvin} in predicting selectivity at higher pressures.
 
 %% conclusion
 By combining the above-mentioned features with more standard geometrical descriptors, an ML model was trained for ambient pressure selectivity. The model identifies the origins of the selectivity drop and yields promising prediction results.
@@ -468,7 +468,7 @@ In the following sections, new descriptors for nanoporous materials will be intr
 
 \subsubsection{Hyperparameter optimization}\label{sct:hyperparameter}
 
-The search for hyperparameters involves finding the best model to optimize the generalization error, as defined in equation~\ref{eq:generalization_error}. The most common strategy is to perform cross-validations to evaluate different model configurations, known as hyperparameter search or optimization. In this case, the randomized search algorithm was utilized to find the best parameters within a predefined reasonable range. Through a random search of 30\,000 iterations on the parameter space, a set of optimal hyperparameters (refer to Table~\ref{tab:hyperparameter} for the meaning of the parameters) for the final ML model was obtained using the following Python dictionary:
+The search for hyperparameters involves finding the best model to optimize the generalization error, as defined in equation~\ref{eq:generalization_error}. The most common strategy is to perform cross-validations to evaluate different model configurations, known as hyperparameter search or optimization. In this case, the randomized search algorithm was used to find the best parameters within a predefined reasonable range. Through a random search of 30\,000 iterations on the parameter space, a set of optimal hyperparameters (refer to Table~\ref{tab:hyperparameter} for the meaning of the parameters) for the final ML model was obtained using the following Python dictionary:
 
 \begin{lstlisting}[language=Python]
 params = {
@@ -550,7 +550,7 @@ This method can later be used in a screening procedure that relies on inexpensiv
 \section{Opening the black box}
 
 %% SHAP intro
-To gain deeper insights into the reasons behind the selectivity drop, the SHAP library of interpretation models\autocite{SHAP,molnar2020interpretable} are utilized to establish relationships between descriptors and predicted ambient-pressure selectivity. Based on Shapley values\autocite{shapley1953value} which measure the contribution of each descriptor to the prediction, this code facilitates local interpretation of the ML model in this study by disentangling the interdependence between descriptors and extracting individual contributions. To go beyond local interpretation, Shapley values for the entire dataset can be rapidly computed using faster algorithms.\autocite{SHAP} This allows the creation of scatterplots, known as SHAP dependence plots, which depict the contribution as a function of descriptor values and enable a more comprehensive interpretation of our ML model on a global scale. By knowing a descriptor value, it becomes possible to infer, with a certain level of uncertainty, how it influences the final predicted value, thereby shedding light on previously unknown structure--property relationships. Lastly, the mean absolute Shapley values of each feature on the training set were utilized to assess feature importance (Figure~\ref{fgr:featimp_shap}).
+To gain deeper insights into the reasons behind the selectivity drop, the SHAP library of interpretation models\autocite{SHAP,molnar2020interpretable} are used to establish relationships between descriptors and predicted ambient-pressure selectivity. Based on Shapley values\autocite{shapley1953value} which measure the contribution of each descriptor to the prediction, this code facilitates local interpretation of the ML model in this study by disentangling the interdependence between descriptors and extracting individual contributions. To go beyond local interpretation, Shapley values for the entire dataset can be rapidly computed using faster algorithms.\autocite{SHAP} This allows the creation of scatterplots, known as SHAP dependence plots, which depict the contribution as a function of descriptor values and enable a more comprehensive interpretation of our ML model on a global scale. By knowing a descriptor value, it becomes possible to infer, with a certain level of uncertainty, how it influences the final predicted value, thereby shedding light on previously unknown structure--property relationships. Lastly, the mean absolute Shapley values of each feature on the training set were used to assess feature importance (Figure~\ref{fgr:featimp_shap}).
 
 \begin{figure}[ht]
   \centering
@@ -619,10 +619,10 @@ These two examples provide a deeper understanding of how the model distinguishes
 
 \section{Beyond thermodynamic considerations}
 
-To gain a deeper understanding of separation processes within nanoporous materials, a machine learning prediction of Xe/Kr ambient-pressure selectivity was performed, aiming for faster results compared to standard GCMC calculations. The CoRE MOF 2019 database was utilized for MOF structures, enabling the evaluation of xenon/krypton selectivity in less than a minute, whereas an equivalent GCMC calculation typically requires approximately \SI{40}{\minute}. 
+To gain a deeper understanding of separation processes within nanoporous materials, a machine learning prediction of Xe/Kr ambient-pressure selectivity was performed, aiming for faster results compared to standard GCMC calculations. The CoRE MOF 2019 database was used for MOF structures, enabling the evaluation of xenon/krypton selectivity in less than a minute, whereas an equivalent GCMC calculation typically requires approximately \SI{40}{\minute}. 
 Unlike the majority of selectivity predictions in the literature, the decision was made to predict selectivity on a logarithmic scale that focuses on the order of magnitude rather than the exact value of selectivity for highly selective materials. Moreover, converting to an exchange Gibbs free energy allowed for a more thermodynamic approach based on enthalpy, entropy, and free energy values. The challenge consisted of predicting the free energy equivalent of ambient-pressure selectivity using low-pressure selectivity alongside key energy, geometrical and chemical descriptors. The resulting fully optimized ML model exhibited high performance, yielding an RMSE of \SI{0.36}{\kilo\joule\per\mole}, which corresponds to an RMSE of $0.06$ on the base-10 log of selectivity.
 
-One specific objective was to uncover the underlying reasons for the observed selectivity drop at high pressure in certain highly selective materials at low pressure. initially studied in Chapter 2. Previous studies (Chapter 2) found that high diversity of pore sizes and channel sizes that favor adsorbate reorganizations could be at the origin of this phenomenon. Through the application of interpretability tools, quantitative factors explaining the conservation or decrease in selectivity for highly selective materials were identified. Depending on energy averaging at \SI{900}{\kelvin}, statistical characterizations of energy or pore size distributions, and differences in occupiable volumes, a structure could exhibit either a selectivity similar to the infinite dilution case or a substantially lower selectivity at higher pressure. The XGBoost model employed in this study utilizes a complex ensemble of decision trees to capture the quantitative rules that can be extracted from the model and used to establish heuristics supporting the intuition about Xe/Kr selectivity in MOF structures.
+One specific objective was to uncover the underlying reasons for the observed selectivity drop at high pressure in some highly selective materials at low pressure, initially studied in Chapter 2. Previous studies (Chapter 2) found that high diversity of pore sizes and channel sizes that favor adsorbate reorganizations could be at the origin of this phenomenon. Through the application of interpretability tools, quantitative factors explaining the conservation or decrease in selectivity for highly selective materials were identified. Depending on energy averaging at \SI{900}{\kelvin}, statistical characterizations of energy or pore size distributions, and differences in occupiable volumes, a structure could exhibit either a selectivity similar to the infinite dilution case or a substantially lower selectivity at higher pressure. The XGBoost model employed in this study utilizes a complex ensemble of decision trees to capture the quantitative rules that can be extracted from the model and used to establish heuristics supporting the intuition about Xe/Kr selectivity in MOF structures.
 
 %% Framework could be reproduced for other type of applications
 The final ML model could be used in a well-designed workflow to find the best performing materials. For instance, structures with pores that are unable to accommodate xenon could be filtered out, followed by the application of a low-pressure selectivity calculation to eliminate selectivity values below a specified threshold. Finally, the structures that would encounter a drop in selectivity could be removed using the model. As a proof of concept, the methodology was tested on Xe/Kr separation, which represents one of the simplest adsorption systems (monoatomic species and the absence of electrostatic interactions). A similar approach could be generalized to other separation applications by calculating the infinite dilution energies with a more conventional method (\emph{e.g.} Widom's insertion), while adjusting the definitions of descriptors to suit the adsorbates of interest.
