--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -32,7 +32,7 @@ To gain a better understanding of the Brownian motion of suspended particles in 
 \end{equation}
 where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average on all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamic is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
 
-To model the diffusion coefficient of xenon and krypton inside nanoporous materials, molecular simulations of the adsorbate displacements will be utilized. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
+To model the diffusion coefficient of xenon and krypton inside nanoporous materials, molecular simulations of the adsorbate displacements will be used. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
 
 \subsection{Molecular dynamics}
 
@@ -181,7 +181,7 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all calculations are \todo{Average number of timesteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 million steps were only partially completed. 
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all calculations are \todo{Average number of timesteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 million steps were only partially completed. 
 
 To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) are sequentially analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales is chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ are removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit out of the 2--47\si{\ns} and 50--950~\si{\ns} timescales.
 
@@ -189,7 +189,7 @@ This approach focuses exclusively on the linear relations between the MSD and ti
 
 \subsubsection{Structure--diffusivity relationships}\label{sct:xenon_diff_screen}
 
-In this section, different relationships between the diffusion coefficient and simple geometrical descriptors will be presented. A forcefield-dependent definition of radii was chosen to ensure better correlation with the results of the MD simulation that utilized the UFF forcefield. The geometrical descriptors were calculated using Zeo++ and these radii to determine the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area, and the pore volume, as explained in Chapter 2. The use of UFF-based radii for the PLD was further justified by the original paper~\cite{Hung_2021}, which demonstrated a stronger correlation between the PLD and the diffusion constant. This correlation can also be observed in Figure~\ref{fgr:diff_pld}. The PLD calculated using the standard CCDC-defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in Chapter 1), there is a linear relationship between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD. This linear relationship is much noisier for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
+In this section, different relationships between the diffusion coefficient and simple geometrical descriptors will be presented. A forcefield-dependent definition of radii was chosen to ensure better correlation with the results of the MD simulation that used the UFF forcefield. The geometrical descriptors were calculated using Zeo++ and these radii to determine the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area, and the pore volume, as explained in Chapter 2. The use of UFF-based radii for the PLD was further justified by the original paper~\cite{Hung_2021}, which demonstrated a stronger correlation between the PLD and the diffusion constant. This correlation can also be observed in Figure~\ref{fgr:diff_pld}. The PLD calculated using the standard CCDC-defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in Chapter 1), there is a linear relationship between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD. This linear relationship is much noisier for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
 Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\,10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon to only undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
@@ -452,7 +452,7 @@ The GrAED algorithm, as presented in section~\ref{sct:grid}, was employed to cal
 
 A slight modification was made to the approach previously described in section~\ref{sct:tutrast} and adopted by Mace et al.,\ to identify the three main components of the lattice Monte Carlo approach. Rather than detecting the channels on the fly, the decision was made to pre-detect the channels to restrict the cluster growth to a specific channel. This approach aims to reduce the computation time required during the clustering step by simulating only one representative channel out of all the potentially equivalent channels --- due to the high level of symmetry, multiple equivalent channels typically exist within a single unit cell, as illustrated in Figures~\ref{fgr:tube_cavities} and~\ref{fgr:zigzag}.
 
-To identify the various channels, a breadth-first search algorithm was utilized to find all connected grid points with an energy below a specified threshold value ($E\e{cutoff}$). The determination of connections between rhomboidal grid voxels (same angles as the unit cell) was based on voxel faces, resulting in six nearest neighbors. Additional connections from the eight edges were considered, totaling 14 nearest neighbors. Including the vertices would yield 26 nearest neighbors. However, for simplicity, only the six primary connections were employed. The breadth-first search algorithm for a grid system is relatively straightforward:
+To identify the various channels, a breadth-first search algorithm was used to find all connected grid points with an energy below a specified threshold value ($E\e{cutoff}$). The determination of connections between rhomboidal grid voxels (same angles as the unit cell) was based on voxel faces, resulting in six nearest neighbors. Additional connections from the eight edges were considered, totaling 14 nearest neighbors. Including the vertices would yield 26 nearest neighbors. However, for simplicity, only the six primary connections were employed. The breadth-first search algorithm for a grid system is relatively straightforward:
 
 All the points of the grid are iterated over:
   \begin{enumerate}
@@ -547,7 +547,7 @@ This correlation between the energy barrier and the diffusion coefficient is con
 This barrier activation energy descriptor completes the description of the diffusion coefficient given by PLD values. As discussed in the dedicated section, PLD values cannot distinguish between structures over \SI{6}{\angstrom} in the ``plateau'', and the difference in diffusion coefficient values was considered as noise in the previous analysis. However, Figure~\ref{fgr:diff_pld_barrier} reveals that higher values of barrier energies are associated with lower diffusion coefficients within the plateau range, thereby explaining the variations in diffusion coefficient within the plateau based on the activation barrier values.
 Although the correlation is not perfect, this barrier descriptor provides better insights into this uncharted area of PLD values above \SI{6}{\angstrom}, which cannot be explained by simple geometric considerations. The barrier activation energy value sheds light on the chemical nature of the diffusion barrier that needs to be overcome.
 
-In the final section of this chapter, the combination of geometrical descriptors with this energy barrier will be employed to train a machine learning model, following the same approach as in the previous Chapter 4. The energy barrier and PLD values, the highest correlated descriptors, will play a prominent role in the final ML model. This model can then be utilized to evaluate the diffusion coefficient of xenon in other materials, offering a significantly faster alternative to MD simulations.
+In the final section of this chapter, the combination of geometrical descriptors with this energy barrier will be employed to train a machine learning model, following the same approach as in the previous Chapter 4. The energy barrier and PLD values, the highest correlated descriptors, will play a prominent role in the final ML model. This model can then be used to evaluate the diffusion coefficient of xenon in other materials, offering a significantly faster alternative to MD simulations.
 
 \subsection{ML prediction model}
 
@@ -578,7 +578,7 @@ Calculating diffusion coefficients is an extremely time-consuming process, compl
   \caption{ Features used in the ML model for diffusion coefficient prediction. }\label{Table:feat_diff}
 \end{table}
 
-The ML model was trained using {80\%} of the 4,873 structures that survived all the different filters imposed. A total of 12 descriptors described in Table~\ref{Table:feat_diff} were employed to train the ML model. The hyperparameters of the XGBoost model were determined using a similar approach as in Chapter 4, and the following values were utilized:
+The ML model was trained using {80\%} of the 4,873 structures that survived all the different filters imposed. A total of 12 descriptors described in Table~\ref{Table:feat_diff} were employed to train the ML model. The hyperparameters of the XGBoost model were determined using a similar approach as in Chapter 4, and the following values were used:
 
 \begin{lstlisting}[language=Python]
   optimal_params = {
@@ -655,7 +655,7 @@ In this chapter, different methods have been introduced for evaluating transport
 
 The obtained results provide the foundation for various follow-up studies. For instance, the effect of tortuosity on diffusion coefficient values and relevant definitions for tortuosity remain open questions. Unidimensional channels can be particularly examined, where the frequency and magnitude of changes in direction can be analyzed to quantify their occurrence\autocite{Bullitt_2003}. Another challenge could consist in measuring different diffusion regimes, such as single-file diffusion characterized by a square root time relation in the mean square displacement (MSD)\autocite{Lin_2005}. In this study, materials with MSD relations other than linear were excluded since only materials with high determination coefficients in the linear fit were considered.
 
-To expand beyond conventional studies, the diffusion coefficient could be utilized to model breakthrough experiments, which is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software\autocite{Sharma_2023} opens new perspectives in modeling. For instance, the axial dispersion coefficient used in a breakthrough model can be calculated using transport properties, combined with thermodynamic data on the adsorption process of xenon and krypton. This presents an opportunity for experiment-theory comparison, fostering a virtuous feedback loop to improve modeling and facilitate the discovery of superior materials.
+To expand beyond conventional studies, the diffusion coefficient could be used to model breakthrough experiments, which is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software\autocite{Sharma_2023} opens new perspectives in modeling. For instance, the axial dispersion coefficient used in a breakthrough model can be calculated using transport properties, combined with thermodynamic data on the adsorption process of xenon and krypton. This presents an opportunity for experiment-theory comparison, fostering a virtuous feedback loop to improve modeling and facilitate the discovery of superior materials.
 
 The diffusion coefficients calculated using the aforementioned methodologies solely describe self-diffusion in an infinitely diluted environment. To better describe transport properties in industrial conditions, it will be necessary, in the future, to study diffusion coefficients in a higher loading environment to account for host--host interactions. Furthermore, mixture simulations can be directly conducted to obtain the so-called Onsager diffusion coefficients, which are based on the Maxwell-Stefan diffusion equation rather than Fick's equation.\autocite{Krishna_2008} The calculation of such quantities requires significant computational resources, as MD simulations on mixtures at relatively high loading must be run for a sufficiently long duration to capture the diffusion regime. Therefore, applying this approach to large-scale screening is impractical, but some interesting materials can be tested to study the effects of mixtures and loading on transport properties.
 
