--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -17,7 +17,7 @@ This final chapter will explore prospective studies focusing on three main resea
 
 \section{Future developments on transport properties}
 
-During the Ph.D. project, the transport properties were thoroughly studied using MD simulations and an ML model primarily based on the PLD and a proxy of the diffusion activation energy. This approach provides very promising results as it significantly accelerates the evaluation of diffusion coefficient values. However, when employing an ML-based approach, the generalizability to other types of systems cannot be guaranteed. To create a simulation that is faster than MD simulations while ensuring higher accuracy and reliability than the ML-based approach, the next steps involve completing the development of the diffusion coefficient calculation code based on the transition state theory (TST) and kinetic Monte Carlo (kMC) simulations. This code is currently in its final stages of development, as explained in the preceding chapter. Once this new approach is developed, it can provide diffusion coefficients that can be utilized in breakthrough modeling software for comparison with experimental data. The subsequent section presents a description of such software, exploring the perspectives offered by RUPTURA\autocite{Sharma_2023}.
+During the Ph.D. project, the transport properties were thoroughly studied using MD simulations and an ML model primarily based on the PLD and a proxy of the diffusion activation energy. This approach provides very promising results as it significantly accelerates the evaluation of diffusion coefficient values. However, when employing an ML-based approach, the generalizability to other types of systems cannot be guaranteed. To create a simulation that is faster than MD simulations while ensuring higher accuracy and reliability than the ML-based approach, the next steps involve completing the development of the diffusion coefficient calculation code based on the transition state theory (TST) and kinetic Monte Carlo (kMC) simulations. This code is currently in its final stages of development, as explained in the preceding chapter. Once this new approach is developed, it can provide diffusion coefficients that can be used in breakthrough modeling software for comparison with experimental data. The subsequent section presents a description of such software, exploring the perspectives offered by RUPTURA\autocite{Sharma_2023}.
 
 \subsection{Final development of the optimized version of TuTraST}
 
@@ -63,7 +63,7 @@ In order to incorporate flexibility effects in the screening procedure at a mini
 
 \subsubsection{Methodology}
 
-To model the dynamics of the framework, Witman et al.\ used the UFF forcefield to describe the non-electrostatic framework bond potentials, except for the metal bonding. For the bond dynamics around the metal, a harmonic equilibrium potential was fixed around the values extracted from the experimental structure. For this reason, this forcefield definition is referred to as the UFF-fix-metal (UFF-FM). In addition of the Lennard-Jones description, the point charge Coulomb interactions were described using the standard Ewald summation technique based on the charges calculated by the density derived electrostatic and chemical (DDEC) method.\autocite{manz2010chemically} Using this forcefield, the authors carried out a systematic snapshot generation of the structures from the CoRE MOF 2014 database with pre-calculated DDEC charges. These snapshots were then utilized to determine the Xe and Kr Henry constant values for the flexible structures, as well as the infinite dilution Xe/Kr selectivity. The study revealed that the flexible selectivity was lower for {95\%} of the materials with a rigid selectivity over $25$ (as shown in Figure~\ref{fgr:underestimated_rigid}), which suggests an overestimation of the top performing materials. Furthermore, the effect of flexibility is much more important for materials with smaller pore sizes due to the increased intensity of interactions at shorter distances.
+To model the dynamics of the framework, Witman et al.\ used the UFF forcefield to describe the non-electrostatic framework bond potentials, except for the metal bonding. For the bond dynamics around the metal, a harmonic equilibrium potential was fixed around the values extracted from the experimental structure. For this reason, this forcefield definition is referred to as the UFF-fix-metal (UFF-FM). In addition of the Lennard-Jones description, the point charge Coulomb interactions were described using the standard Ewald summation technique based on the charges calculated by the density derived electrostatic and chemical (DDEC) method.\autocite{manz2010chemically} Using this forcefield, the authors carried out a systematic snapshot generation of the structures from the CoRE MOF 2014 database with pre-calculated DDEC charges. These snapshots were then used to determine the Xe and Kr Henry constant values for the flexible structures, as well as the infinite dilution Xe/Kr selectivity. The study revealed that the flexible selectivity was lower for {95\%} of the materials with a rigid selectivity over $25$ (as shown in Figure~\ref{fgr:underestimated_rigid}), which suggests an overestimation of the top performing materials. Furthermore, the effect of flexibility is much more important for materials with smaller pore sizes due to the increased intensity of interactions at shorter distances.
 
 
 \begin{figure}[ht]
@@ -188,7 +188,7 @@ By employing simple simulation methods (Widom insertion and MD) on rigid structu
 
 \section{Noble gas polarizability}
 
-The last effect that could greatly influence adsorption performance is the level of theory behind the modeling of interaction energy. In most screening studies, (our group included), very low-level classical theories are commonly utilized to describe guest--host interactions due to their low computational cost. To improve the accuracy of descriptions, some studies focus on a few specific structures and use higher levels of theory such as DFT calculations. However, the computational cost associated with these methods is prohibitive for high-throughput screenings.
+The last effect that could greatly influence adsorption performance is the level of theory behind the modeling of interaction energy. In most screening studies, (our group included), very low-level classical theories are commonly used to describe guest--host interactions due to their low computational cost. To improve the accuracy of descriptions, some studies focus on a few specific structures and use higher levels of theory such as DFT calculations. However, the computational cost associated with these methods is prohibitive for high-throughput screenings.
 
 Prior to exploring higher-cost methods, it is essential to first identify the limitations of molecular modeling in current screening methodologies. This work is motivated by recent advancements in experimental design of nanoporous materials for Xe/Kr separation. The most selective materials are based on highly polar groups or exposed open-metal sites.\autocite{Li_2019,Pei_2022} The polarization phenomenon is, therefore, central to these materials, but it cannot be adequately described by a simple Lennard-Jones potential, particularly when induced by high partial charge values.
 
